--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="https://unpkg.com/aframe-environment-component@1.1.0/dist/aframe-environment-component.min.js"></script>
     <script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/v3.3.0/dist/aframe-extras.min.js"></script>
+    <script src="js/sky.js"></script>
+
     <script>
       function setLight(){
           var light = document.querySelector('#LightSwitch');
@@ -14,13 +16,46 @@
               light.setAttribute('color', 'grey');
           }
       }
+
+      AFRAME.registerComponent('sun-position-setter', {
+          init: function () {
+            var skyEl = this.el;
+            var orbitEl = this.el.sceneEl.querySelector('#Sun');
+            orbitEl.addEventListener('componentchanged', function changeSun (evt) {
+                var sunPosition;
+                var phi;
+                var theta;
+
+                if (evt.detail.name !== 'rotation') { return; }
+
+                sunPosition = orbitEl.getAttribute('rotation');
+
+                if(sunPosition === null) { return; }
+
+                theta = Math.PI * (- 0.5);
+                phi = 2 * Math.PI * (sunPosition.y / 360 - 0.5);
+                //Debugging position
+                //console.log(Math.cos(phi), Math.sin(phi) * Math.sin(theta))
+                skyEl.setAttribute('material', 'sunPosition', {
+                    x: Math.cos(phi),
+                    y: Math.sin(phi) * Math.sin(theta),
+                    z: -1
+                });
+            });
+        }
+    });
+
   </script>
   </head>
   <body>
-    <a-scene>
+    <a-scene physics="gravity: 0">
+      <a-entity camera look-controls wasd-controls="acceleration:65" universal-controls kinematic-body position="-15-153 2.228 1.273" rotation="-1.476 270 0"  camera="userHeight: 0">
+        <a-entity raycaster="far: 150; objects: .intersectable" cursor geometry="primitive: ring; radiusOuter: 0.015;
+            radiusInner: 0.01; segmentsTheta: 32" material="color: #283644; shader: flat"
+                  position="0 0 -0.75"></a-entity>
+                </a-entity>
       <a-sky color="#ECECEC"></a-sky>
       <a-entity environment="preset: forest; groundColor: #445; grid: cross"></a-entity>
-      <a-box static-body></a-box>
 
       <a-assets>        
         <a-asset-items id="desktop" src="Models/Desktop/scene.gltf"></a-asset-items>
@@ -43,6 +78,8 @@
         <a-asset-items id="LightSwitch"  src="Models/LightSwitch/scene.gltf"></a-asset-items>
         <a-asset-items id="Shower"  src="Models/Shower/scene.gltf"></a-asset-items>
         <a-asset-items id="Toilet"  src="Models/Toilet/scene.gltf"></a-asset-items>
+        <a-asset-items id="Sun"  src="Models/Sun/scene.gltf"></a-asset-items>
+        <a-asset-items id="BodyBag"  src="Models/BodyBag/scene.gltf"></a-asset-items>
 
       </a-assets>
 
@@ -57,17 +94,19 @@
       <a-entity id="update9" rotation="0 -85.86517405169056 0" position="3.20751 0.46853 -0.14475" scale="0.0025 0.002 0.002" gltf-model="#GamingChair" ></a-entity>
       <a-entity id="update10" position="2.86102 0 3.83564" scale="1 1 1" gltf-model="#ToiletPaperSafe" ></a-entity>
       <a-entity id="update11" position="3.88033 0.09921 3.75776" scale="0.15 0.15 0.15" gltf-model="#ToiletPaper" ></a-entity>
-      <a-entity id="update12" scale="10 10 10" position="0 3.89832 -0.77565" gltf-model="#Roof" ></a-entity>
+      <a-entity id="update12" scale="7.52367 10 8.38195" position="-0.66783 3.89832 0.11353" gltf-model="#Roof" ></a-entity>
       <a-entity id="update13" scale="0.003 0.0025 0.003" position="2.25987 0.71204 -1.25529" gltf-model="#Computer"></a-entity>
       <a-entity id="update14" rotation="179.99927500270914 -89.85525213698162 -179.9998479605043" scale="0.01 0.015 0.015" position="0.50221 1.56618 -7.1103" gltf-model="#FrontDoor"></a-entity>
       <a-entity id="update15" rotation="0 89.99333496560814 0" scale="0.01 0.015 0.015" position="-0.03755 1.52566 7.19824" gltf-model="#BackDoor"></a-entity>
       <a-entity id="update16" scale="1.25 1.25 1.25" rotation="-179.9998479605043 -0.4365938398896873 -179.9998479605043" position="-7.6466 -0.0891 6.7431" gltf-model="#Kitchen"></a-entity>
-      <a-entity id="update17" position="-7.56381 0 2.31568" scale="0.02 0.02 0.02" gltf-model="#Fridge"></a-entity>
+      <a-entity id="update17" position="-7.21001 0 2.31568" scale="0.02 0.02 0.02" gltf-model="#Fridge"></a-entity>
       <a-entity id="update19" rotation="-0.007448451336700701 -85.70073516448801 0.007448451336700701" position="1.56101 1.76885 -2.30296" scale="0.0005 0.0005 0.0005" gltf-model="#LightSwitch"></a-entity>
       <a-entity id="update20" scale="1.86759 1.73669 1.5" rotation="0 -89.89134847807486 0" position="5.6324 0.06715 4.74053" gltf-model="#Shower"></a-entity>
       <a-entity id="update21" rotation="0 -86.62548904582917 0" scale="0.6 0.6 0.6" position="3.42469 0.53269 6.58455" gltf-model="#Toilet"></a-entity>
+      <a-entity id="update22" position="33.76766 35.80319 121.39801" scale="0.01 0.01 0.01" gltf-model="#Sun"></a-entity>
+      <a-entity id="update23" position="4.94191 0.09096 -16.98409" scale="0.01 0.01 0.01" gltf-model="#BodyBag"></a-entity>
+      <a-entity id="update24" position="-6.06747 0.05414 -15.37116" scale="0.01 0.01 0.01" gltf-model="#BodyBag"></a-entity>
 
-      <a-entity camera look-controls wasd-controls="acceleration:65" position="0 1.6 0"></a-entity>
 
     
 
