--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/v3.3.0/dist/aframe-extras.min.js"></script>
     <script src="js/sky.js"></script>
 
+    
+  </head>
+  <body>
+
     <script>
       function setLight(){
           var light = document.querySelector('#LightSwitch');
@@ -16,7 +20,9 @@
               light.setAttribute('color', 'grey');
           }
       }
-
+    </script>
+    
+    <script>
       AFRAME.registerComponent('sun-position-setter', {
           init: function () {
             var skyEl = this.el;
@@ -46,8 +52,8 @@
     });
 
   </script>
-  </head>
-  <body>
+
+  
     <a-scene physics="gravity: 0">
       <a-entity camera look-controls wasd-controls="acceleration:65" universal-controls kinematic-body position="-15-153 2.228 1.273" rotation="-1.476 270 0"  camera="userHeight: 0">
         <a-entity raycaster="far: 150; objects: .intersectable" cursor geometry="primitive: ring; radiusOuter: 0.015;
