--- a/index.html
+++ b/index.html
@@ -21,13 +21,9 @@
       <a-sky color="#ECECEC"></a-sky>
       <a-entity environment="preset: forest; groundColor: #445; grid: cross"></a-entity>
 
-      <a-entity id="sky" geometry="primitive: sphere; radius: 200;" material="shader: sky; side: back"
-      sun-position-setter>
-<!-- Sun Position and Duration and Repetition values for animation -->
-<a-entity id="orbit">
-    <a-animation attribute="rotation" from="0 0 0" to="0 90 0" dur="50000" repeat="1000"></a-animation>
-</a-entity>
-</a-entity>
+      <a-light type="directional" color="grey" position="-.5 1 1" angle="60" decay="1" intensity=".6"></a-light>
+    <a-light id="light" type="ambient" color="white" position="0 0 0" angle="60" decay="1" intensity="1"></a-light>
+
 
 <a-box onclick="fourLevelLight()" color="black" material="side: double; repeat: 1 1" width="15"
       height="21" depth="1" position="1.55038 1.77466 -2.29498" rotation="0 -85.23090977248074 0" scale="0.015 0.015 0.015" static-body
