--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
 
 
 <a-box onclick="fourLevelLight()" color="black" material="side: double; repeat: 1 1" width="15"
-      height="21" depth="1" position="1.55038 1.77466 -2.29498" rotation="0 -85.23090977248074 0" scale="0.015 0.015 0.015" static-body
-      class="intersectable">
+      height="21" depth="1" position="1.55038 1.77466 -2.29498" rotation="0 -85.23090977248074 0" scale="0.015 0.015 0.015">
     </a-box>
 
       <!--Function levels of light when clicked -->
