--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <a-scene physics="debug: true" cursor="rayOrigin:mouse">
 
       
-      <a-entity static-body camera look-controls wasd-controls="acceleration:65" universal-controls position="-.48 1.606 -0.104" rotation="-1.476 270 0"  camera="userHeight: 1.6">
+      <a-entity kinetic-body camera look-controls wasd-controls="acceleration:65" universal-controls position="-.48 1.606 -0.104" rotation="-1.476 270 0"  camera="userHeight: 1.6">
         <a-entity raycaster="far: 150; objects: .intersectable" cursor geometry="primitive: ring; radiusOuter: 0.015;
             radiusInner: 0.01; segmentsTheta: 32" material="color: #283644; shader: flat"
                   position="0 0 -0.75"></a-entity>
