--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
       <a-box  static-body position= "-0.70328 0.32195 7.3342" rotation:= "0 179.95573021027923 0" scale= "14.64794 1.10375 0.10262"></a-box>
 
       <!--The outside world wiht the forest and grasses-->
-      <a-entity environment="preset: forest; groundColor: #445; grid: cross"></a-entity>
+      <a-entity environment="preset: forest; groundColor: #445; grid: cross"  ></a-entity>
 
     <a-light type="directional" color="grey" position="-.5 1 1" angle="60" decay="1" intensity=".6"></a-light>
     <a-light id="light" type="ambient" color="white" position="0 0 0" angle="60" decay="1" intensity="1"></a-light>
 
-<!---->
+<!--different light levels-->
     <a-box onclick="fourLevelLight()" color="black" material="side: double; repeat: 1 1" width="15"
       height="21" depth="1" position="1.55038 1.77466 -2.29498" rotation="0 -85.23090977248074 0" scale="0.015 0.015 0.015" 
       static-body class="intersectable">
@@ -48,7 +48,7 @@
 
 
 
-
+<!--loaded all the different assets to be used in the world created-->
       <a-assets>        
         <a-asset-items id="desktop" src="Models/Desktop/scene.gltf"></a-asset-items>
         <a-asset-items id="apartment" src="Models/Apartment/scene.gltf"></a-asset-items>
@@ -87,8 +87,18 @@
 
       </a-assets>
 
-    
+      <a-entity
+      text="value:Click Speakers to Play Audio!; color:#000000; shader: msdf; font:https://raw.githubusercontent.com/etiennepinchon/aframe-fonts/master/fonts/snippet/Snippet.json;"
+      position= "-7.39784 1.539 -4.94764"
+      rotation= "5.064373951161346 85.79126249611868 0.10141352973815572" scale="3 3 3"></a-entity>  
 
+      <a-entity
+      text="value:Click me to Change Lights!; color:#000000; shader: msdf; font:https://raw.githubusercontent.com/etiennepinchon/aframe-fonts/master/fonts/snippet/Snippet.json;"
+      position= "1.24152 1.983 -1.40536"
+      rotation= "6.302535746439055 -102.28270671336917 0" scale="3 3 3"></a-entity>  
+
+
+<!--Covid scene that loads the models in the specific scene-->
 
         <a-entity id="Covid">
 
@@ -119,8 +129,8 @@
         <a-entity id="update20" scale="1.86759 1.73669 1.5" rotation="0 -89.89134847807486 0" position="5.6324 0.06715 4.74053" gltf-model="#Shower"></a-entity>
         <a-entity id="update21" rotation="0 -86.62548904582917 0" scale="0.6 0.6 0.6" position="3.42469 0.53269 6.58455" gltf-model="#Toilet"></a-entity>
         <a-entity id="update22" position="33.76766 35.80319 121.39801" scale="0.01 0.01 0.01" gltf-model="#Sun"></a-entity>
-        <a-entity id="update23" position="4.94191 0.09096 -16.98409" scale="0.01 0.01 0.01" gltf-model="#BodyBag"></a-entity>
-        <a-entity id="update33" position="-5.10295 0.25495 -15.72626" scale="0.01 0.01 0.01" gltf-model="#BodyBag"></a-entity>
+        <a-entity id="update23" position="4.94191 0.09096 -12.4027" scale="0.01 0.01 0.01" gltf-model="#BodyBag"></a-entity>
+        <a-entity id="update33" position="-5.10295 0.25495 -12.71993" scale="0.01 0.01 0.01" gltf-model="#BodyBag"></a-entity>
         <a-entity id="update34" rotation="0 103.76838627614339 0" position="-7.15958 0.07366 -3.86758" scale="0.05 0.05 0.05" sound="src: url(Audio\covid.mp3); on: click" gltf-model="#Speakers"></a-entity>
         <a-entity id="update26" scale="0.02 0.02 0.02" position="-7.20484 1.16482 4.13291" gltf-model="#Food"></a-entity>
         <a-entity id="update27" rotation="0 89.07431066221831 0" scale="0.1 0.1 0.1" position="-7.2247 1.0246 4.67344" gltf-model="#Food2"></a-entity>
@@ -142,6 +152,7 @@
 
 
 
+<!--Non-Covid scene that loads the models in the specific scene-->
 
         <a-entity id="NonCovid" visible="false">
           <a-box color="black" position= "1.57887 1.45186 0.3431"
